# LanternSpectrometer

./: README.md
SpectrometerPackage/: CMakeLists.txt  KromekDriver.pro  Makefile  Readme.txt  ReleaseNotes.txt  SpectrometerDriver.sln  run_edit.sh
SpectrometerPackage/ConsoleExample/: CMakeLists.txt  ConsoleExample  ConsoleExample.pro  Makefile  console.c
SpectrometerPackage/KromekDriver/: CMakeLists.txt  KromekDriver.pro  KromekDriver.vcxproj  Makefile
SpectrometerPackage/KromekDriver/include/: D3DataProcessor.h  D3Structs.h  DeviceBase.h  IDataProcessor.h  IDevice.h  IntervalCountProcessor.h  SIGMA_25.h  TN15.h  Thread.h  UNIBASE.h  USBKromekDataInterfaceLinux.h  USBSerialDataInterfaceWindows.h  kmkTime.h  version.h
SpectrometerPackage/KromekDriver/src/: D3DataProcessor.cpp  DeviceBase.cpp  DeviceMgr.cpp  GR05.cpp  GR1.cpp  HIDDataInterfaceWindows.cpp  IntervalCountProcessor.cpp  K102.cpp  RadAngel.cpp  SIGMA_25.cpp  SIGMA_50.cpp  TN15.cpp  Thread.cpp  UNIBASE.cpp  USBKromekDataInterfaceLinux.cpp  USBSerialDataInterfaceWindows.cpp  stdafx.cpp
SpectrometerPackage/LanternBeacon/: .main.cpp.swp  CMakeLists.txt  LanternBeacon.pro  Makefile  krm_detector.cpp  krm_detector.hpp  lan_beacon.conf  main.cpp
SpectrometerPackage/LinuxModule/: .cache.mk  .kromekusb.ko.cmd  .kromekusb.mod.o.cmd  .kromekusb.o.cmd  KromekDriverGuide.doc  Makefile  kromekusb.c  kromekusb.ko  kromekusb.mod.c  modules.order
SpectrometerPackage/LinuxModule/.tmp_versions/: kromekusb.mod
SpectrometerPackage/SpectrometerDriver/: CMakeLists.txt  Detector.cpp  Detector.h  DriverMgr.cpp  DriverMgr.h  Makefile  Spectrometer.def  SpectrometerData.h  SpectrometerDriver.cpp  SpectrometerDriver.h  SpectrometerDriver.pro  SpectrometerDriver.vcxproj  devices.h  version.h
SpectrometerPackage/SpectrometerExample/: Makefile  QTableWidgetDeviceItem.h  SpectrometerExample  SpectrometerExample.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomgraph.cpp  qcustomgraph.h
SpectrometerPackage/libs/linux64/release/: libSpectrometerDriver.so.1.0  libSpectrometerDriver.so.1.0.0
SpectrometerPackage/libs/win32/debug/: SpectrometerDriver.lib
SpectrometerPackage/libs/win32/release/: KromekDriver.lib
SpectrometerPackage/libs/win64/debug/: SpectrometerDriver.lib
SpectrometerPackage/libs/win64/release/: KromekDriver.lib  SpectrometerDriver.lib
